<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.detailuser.DetailUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_profile_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:src="@drawable/githublogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/Github_Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:maxWidth="300dp"
            android:maxLines="1"
            android:text="@string/name"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_user_profile_picture" />

        <TextView
            android:id="@+id/tv_username"
            style="@style/Github_Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:maxWidth="300dp"
            android:maxLines="1"
            android:text="@string/username"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_bio"
            style="@style/Github_Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxWidth="300dp"
            android:maxLines="3"
            android:text="@string/user_bio"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_username" />

        <TextView
            android:id="@+id/public_repos"
            style="@style/Github_Default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/public_repos"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/followers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bio" />

        <TextView
            android:id="@+id/followers"
            style="@style/Github_Default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/followers"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/following"
            app:layout_constraintStart_toEndOf="@id/public_repos"
            app:layout_constraintTop_toBottomOf="@id/tv_bio" />

        <TextView
            android:id="@+id/following"
            style="@style/Github_Default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/followings"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/followers"
            app:layout_constraintTop_toBottomOf="@id/tv_bio" />

        <TextView
            android:id="@+id/tv_public_repos"
            style="@style/Github_Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/public_repos"
            app:layout_constraintStart_toStartOf="@id/public_repos"
            app:layout_constraintTop_toBottomOf="@id/public_repos" />

        <TextView
            android:id="@+id/tv_followers"
            style="@style/Github_Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/followers"
            app:layout_constraintStart_toStartOf="@id/followers"
            app:layout_constraintTop_toBottomOf="@id/followers" />

        <TextView
            android:id="@+id/tv_following"
            style="@style/Github_Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/following"
            app:layout_constraintStart_toStartOf="@id/following"
            app:layout_constraintTop_toBottomOf="@id/following" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabSelectedTextColor="@color/github_green"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_public_repos" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/favorite_button"
            android:src="@drawable/ic_favorite_no"
            android:visibility="gone"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/github_black_light2"
            android:indeterminateTint="@color/github_green"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>